--- a/chat-widget.html
+++ b/chat-widget.html
@@ -14,17 +14,17 @@
   --bot-bg:#fff8e6;
   --muted:#667085;
   --radius:16px;
-  --vh:1vh; /* سيتم تحديثه عبر JS ليتعامل مع شريط المتصفح */
+  --vh:1vh;
 }
 
 /* reset */
 *{box-sizing:border-box;margin:0;padding:0;}
-html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden}
+html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden;}
 
-/* Floating button (داخل الـ iframe) */
-.chat-fab {
+/* floating button */
+.chat-fab{
   position:fixed;
-  bottom:calc(20px + env(safe-area-inset-bottom, 0px));
+  bottom:calc(20px + env(safe-area-inset-bottom,0px));
   right:20px;
   z-index:9999;
   width:60px;height:60px;border-radius:50%;
@@ -36,34 +36,31 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .chat-fab:hover{transform:scale(1.05)}
 .chat-fab.hidden{opacity:0;pointer-events:none}
 
-/* overlay full screen (تحسب ارتفاع ديناميكيًا) */
-.chat-overlay {
+/* overlay */
+.chat-overlay{
   position:fixed;inset:0;
   display:none;align-items:center;justify-content:center;
   background:rgba(0,0,0,0.45);z-index:10000;
-  -webkit-backdrop-filter: blur(6px);
-  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter:blur(6px);
+  backdrop-filter:blur(6px);
 }
-
-/* show */
 .chat-overlay.show{display:flex}
 
-/* صندوق الشات - نستخدم vh ديناميكي */
-.chat-box {
+/* chat box */
+.chat-box{
   width:100%;
   height:calc(var(--vh) * 100);
   max-height:100dvh;
   background:var(--card);
   display:flex;flex-direction:column;position:relative;
-  border-radius:12px 12px 0 0;
-  overflow:hidden;
+  border-radius:12px 12px 0 0;overflow:hidden;
   box-shadow:0 10px 30px rgba(2,6,23,0.12);
 }
 
-/* الهيدر: نأخذ في الحسبان safe-area-inset-top حتى لا يختفي تحت شريط المتصفح */
-.header {
+/* header */
+.header{
   background:linear-gradient(90deg,var(--accent),var(--accent-2));
-  color:#fff;padding:12px 12px;
+  color:#fff;padding:12px;
   display:flex;align-items:center;flex-shrink:0;
   position:sticky;top:env(safe-area-inset-top,0px);z-index:100;
   padding-top:calc(12px + env(safe-area-inset-top,0px));
@@ -71,28 +68,32 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .header .title{flex:1;font-weight:700;font-size:16px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .header .close{cursor:pointer;font-size:28px;background:none;border:none;color:#fff;width:36px;height:36px;display:flex;align-items:center;justify-content:center;padding:0}
 
-/* المحتوى قابل للتمرير (ونعطيه min-height:0 لتفادي مشاكل flex-scroll) */
+/* messages area */
 .area{
-  flex:1; padding:12px; overflow-y:auto; overflow-x:hidden;
+  flex:1;padding:12px;overflow-y:auto;overflow-x:hidden;
   display:flex;flex-direction:column;gap:8px;min-height:0;
   -webkit-overflow-scrolling:touch;
   scroll-behavior:smooth;
 }
 
-/* عناصر التحكم في الأسفل - نأخذ safe-area-inset-bottom */
+/* controls */
 .controls{
-  padding:10px 12px  calc(12px + env(safe-area-inset-bottom,0px));
-  border-top:1px solid #eee;display:flex;flex-direction:column;gap:8px;flex-shrink:0;background:var(--card);
+  padding:10px 12px calc(12px + env(safe-area-inset-bottom,0px));
+  border-top:1px solid #eee;
+  display:flex;flex-direction:column;gap:8px;flex-shrink:0;
+  background:var(--card);
+  transition:transform .3s ease;
 }
 .input{display:flex;gap:8px;align-items:center}
 .input input{
-  flex:1;padding:10px;border-radius:14px;border:1px solid #e6eef6;font-size:14px;min-width:0;
+  flex:1;padding:10px;border-radius:14px;border:1px solid #e6eef6;
+  font-size:14px;min-width:0;
 }
 .btn{padding:10px 14px;border-radius:14px;border:none;background:var(--accent);color:#fff;cursor:pointer}
 .quick{display:flex;gap:8px;flex-wrap:wrap}
 .quick button{padding:8px;border-radius:12px;border:1px dashed #ccc;background:transparent;font-size:13px;cursor:pointer;color:var(--accent)}
 
-/* الرسائل */
+/* messages */
 .msg{display:flex;max-width:85%;flex-direction:column;word-break:break-word}
 .msg.user{align-self:flex-end}
 .msg.user .bubble{background:var(--user-bg);border-radius:16px 16px 0 16px;padding:10px 14px}
@@ -100,13 +101,12 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 .msg.bot .bubble{background:var(--bot-bg);border-radius:16px 16px 16px 0;padding:10px 14px}
 .meta{font-size:11px;color:var(--muted);margin-top:4px;text-align:right}
 
-/* typing animation */
+/* typing */
 .typing span{width:6px;height:6px;background:var(--muted);border-radius:50%;display:inline-block;animation:dot 1s infinite}
 .typing span:nth-child(2){animation-delay:.18s}
 .typing span:nth-child(3){animation-delay:.36s}
 @keyframes dot{0%,100%{opacity:.3;transform:translateY(0)}50%{opacity:1;transform:translateY(-4px)}}
 
-/* responsive tweaks */
 @media (min-width:700px){
   .chat-box{width:640px;border-radius:14px}
   .chat-fab{right:28px;bottom:28px}
@@ -114,10 +114,8 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 </style>
 </head>
 <body>
-<!-- Floating button داخل الـ iframe -->
 <div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">💬</div>
 
-<!-- Overlay الشات -->
 <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
   <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
     <div class="header">
@@ -127,8 +125,8 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 
     <div class="area" id="area" tabindex="0" aria-live="polite" aria-atomic="false"></div>
 
-    <div class="controls">
-      <div class="quick" id="quickActions" aria-hidden="false">
+    <div class="controls" id="controls">
+      <div class="quick" id="quickActions">
         <button data-text="أريد أفضل عرض">أفضل عرض</button>
         <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
         <button data-text="تمام">تمام</button>
@@ -144,239 +142,124 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 
 <script>
 (function(){
-  'use strict';
+'use strict';
 
-  // ====== إعداد vh ديناميكي لمشاكل شريط المتصفح على الموبايل ======
-  function setVh(){
-    // use window.innerHeight to account for browser chrome (address bar)
-    document.documentElement.style.setProperty('--vh', (window.innerHeight * 0.01) + 'px');
-  }
-  window.addEventListener('resize', setVh);
-  window.addEventListener('orientationchange', function(){ setTimeout(setVh,300); });
-  setVh();
+/* ===== ضبط الـ vh ديناميكيًا ===== */
+function setVh(){
+  const vh = window.innerHeight * 0.01;
+  document.documentElement.style.setProperty('--vh', `${vh}px`);
+}
+setVh();
+window.addEventListener('resize', setVh);
+window.addEventListener('orientationchange', ()=>setTimeout(setVh,400));
 
-  // ===== عناصر الواجهة =====
-  const openBtn = document.getElementById('openChat');
-  const overlay = document.getElementById('chatOverlay');
-  const closeBtn = document.getElementById('closeChat');
-  const area = document.getElementById('area');
-  const inp = document.getElementById('inp');
-  const btn = document.getElementById('btn');
-  const quick = document.getElementById('quickActions');
+/* عناصر */
+const openBtn=document.getElementById('openChat');
+const overlay=document.getElementById('chatOverlay');
+const closeBtn=document.getElementById('closeChat');
+const area=document.getElementById('area');
+const inp=document.getElementById('inp');
+const btn=document.getElementById('btn');
+const quick=document.getElementById('quickActions');
+const controls=document.getElementById('controls');
 
-  // Worker URL - اتركه كما كان أو عدّله لو لزم
-  const WORKER_URL = 'https://kawkab.kawkab-arabia.workers.dev/';
+const WORKER_URL='https://kawkab.kawkab-arabia.workers.dev/';
+let historyMessages=[],chatOpened=false;
 
-  // حالة سريعة
-  let historyMessages = [], chatOpened = false, finalized = false;
-
-  // إرسال رسالة للأب (parent) عند الفتح/الإغلاق - ليتعامل الـ parent مع overflow
-  function postToParent(action){
-    try{
-      if(window.parent && window.parent !== window){
-        window.parent.postMessage({action}, '*');
-      }
-    }catch(e){}
-  }
-
-  // Append message ثم تأكد من الـ scrolling بشكل صحيح (نستخدم scrollIntoView)
-  function safeText(s){
-    const d = document.createElement('div');
-    d.textContent = s;
-    return d.innerHTML;
-  }
-
-  function append(who, text){
-    const w = document.createElement('div');
-    w.className = 'msg ' + (who === 'user' ? 'user' : 'bot');
-    const b = document.createElement('div');
-    b.className = 'bubble';
-    b.innerHTML = safeText(text);
-    w.appendChild(b);
-    const m = document.createElement('div');
-    m.className = 'meta';
-    // use 24-hour H:M without seconds
-    const now = new Date();
-    const time = now.toLocaleTimeString('ar-EG', {hour:'2-digit', minute:'2-digit'});
-    m.textContent = time;
-    w.appendChild(m);
-    area.appendChild(w);
-
-    // scroll new message into view safely
-    // use requestAnimationFrame to ensure layout updated
-    requestAnimationFrame(()=>{
-      try{
-        // prefer scrollIntoView to avoid messages going out of viewport
-        w.scrollIntoView({behavior:'smooth', block:'nearest'});
-      }catch(e){
-        area.scrollTop = area.scrollHeight - area.clientHeight;
-      }
-    });
-  }
-
-  // show typing indicator element (returns element to remove later)
-  function showTyping(){
-    const el = document.createElement('div');
-    el.className = 'msg bot';
-    el.innerHTML = '<div class="bubble"><div class="typing" aria-hidden="true"><span></span><span></span><span></span></div></div>';
-    area.appendChild(el);
-    // ensure visible
-    requestAnimationFrame(()=> el.scrollIntoView({behavior:'smooth', block:'nearest'}));
-    return el;
-  }
-
-  // auto-scroll when keyboard opens or input focused
-  inp.addEventListener('focus', ()=> {
-    // small timeout so that mobile keyboard resize finishes
-    setTimeout(()=> {
-      // scroll last message or area to bottom
-      if(area.lastElementChild) area.lastElementChild.scrollIntoView({behavior:'smooth', block:'nearest'});
-    }, 300);
-  });
-
-  // also monitor viewport changes (mobile keyboard show/hide)
-  let lastInnerHeight = window.innerHeight;
-  setInterval(()=> {
-    if(Math.abs(window.innerHeight - lastInnerHeight) > 120){
-      // big change -> probably keyboard open/close -> recalc vh and scroll
-      lastInnerHeight = window.innerHeight;
-      setVh();
-      if(area.lastElementChild) area.lastElementChild.scrollIntoView({behavior:'smooth', block:'nearest'});
-    }
-  }, 300);
-
-  // init messages when first open
-  function openChat(){
-    overlay.classList.add('show');
-    overlay.setAttribute('aria-hidden', 'false');
-    openBtn.classList.add('hidden');
-    if(!chatOpened){
-      append('bot', 'أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
-      chatOpened = true;
-    }
-    postToParent('chatOpened');
-    // focus input after open
-    setTimeout(()=> inp.focus(), 400);
-  }
-
-  function closeChat(){
-    overlay.classList.remove('show');
-    overlay.setAttribute('aria-hidden', 'true');
-    openBtn.classList.remove('hidden');
-    postToParent('chatClosed');
-    // return focus to fab
-    setTimeout(()=> openBtn.focus(), 200);
-  }
-
-  // send payload to worker
-  async function sendToWorker(payload){
-    try{
-      const res = await fetch(WORKER_URL, {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify(payload),
-      });
-      return res;
-    }catch(e){
-      throw e;
+/* ===== معالجة ظهور الكيبورد أو تصغير الشاشة ===== */
+let lastHeight=window.innerHeight;
+window.addEventListener('resize',()=>{
+  const current=window.innerHeight;
+  const diff=lastHeight-current;
+  // لما الكيبورد يفتح أو يقفل
+  if(Math.abs(diff)>100){
+    lastHeight=current;
+    setVh();
+    // لو الكيبورد فتح (diff > 0) نحرك الكنترولز فوق
+    if(diff>0){
+      controls.style.transform='translateY(-20px)';
+    }else{
+      controls.style.transform='translateY(0)';
     }
   }
+});
 
-  // send message flow
-  async function sendMessage(){
-    const txt = inp.value.trim();
-    if(!txt || finalized) return;
-    append('user', txt);
-    inp.value = '';
-    const typing = showTyping();
-    btn.disabled = true;
-    inp.disabled = true;
-
-    try{
-      const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
-      typing.remove();
-      if(!res || !res.ok){
-        append('bot', 'النت فاصل ولا في مشكلة في السيرفر 😅');
-      } else {
-        const j = await res.json().catch(()=> ({}));
-        const reply = j.text || j.reply || 'مش فاهمك قوي 😅 جرب تاني';
-        append('bot', reply);
-        historyMessages.push({role:'user', content: txt}, {role:'assistant', content: reply});
-      }
-    }catch(e){
-      try{ typing.remove(); }catch(_){}
-      append('bot', 'النت فاصل ولا إيه؟ 😅');
-    } finally {
-      btn.disabled = false;
-      inp.disabled = false;
-      inp.focus();
-    }
+/* ===== الفتح والإغلاق ===== */
+function postToParent(action){
+  try{if(window.parent&&window.parent!==window)window.parent.postMessage({action},'*');}catch(e){}
+}
+openBtn.onclick=()=>{
+  overlay.classList.add('show');
+  openBtn.classList.add('hidden');
+  if(!chatOpened){
+    append('bot','أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
+    chatOpened=true;
   }
+  postToParent('chatOpened');
+  setTimeout(()=>inp.focus(),400);
+};
+closeBtn.onclick=()=>{
+  overlay.classList.remove('show');
+  openBtn.classList.remove('hidden');
+  postToParent('chatClosed');
+};
 
-  // Events
-  openBtn.addEventListener('click', openChat);
-  closeBtn.addEventListener('click', closeChat);
+/* ===== الرسائل ===== */
+function safeText(s){const d=document.createElement('div');d.textContent=s;return d.innerHTML;}
+function append(who,text){
+  const w=document.createElement('div');
+  w.className='msg '+(who==='user'?'user':'bot');
+  const b=document.createElement('div');
+  b.className='bubble';
+  b.innerHTML=safeText(text);
+  w.appendChild(b);
+  const m=document.createElement('div');
+  m.className='meta';
+  m.textContent=new Date().toLocaleTimeString('ar-EG',{hour:'2-digit',minute:'2-digit'});
+  w.appendChild(m);
+  area.appendChild(w);
+  requestAnimationFrame(()=>w.scrollIntoView({behavior:'smooth',block:'nearest'}));
+}
+function showTyping(){
+  const el=document.createElement('div');
+  el.className='msg bot';
+  el.innerHTML='<div class="bubble"><div class="typing"><span></span><span></span><span></span></div></div>';
+  area.appendChild(el);
+  el.scrollIntoView({behavior:'smooth',block:'nearest'});
+  return el;
+}
 
-  btn.addEventListener('click', sendMessage);
-  inp.addEventListener('keydown', (e)=> { if(e.key === 'Enter') sendMessage(); });
+/* ===== إرسال ===== */
+async function sendToWorker(payload){
+  return await fetch(WORKER_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+}
+async function sendMessage(){
+  const txt=inp.value.trim();
+  if(!txt)return;
+  append('user',txt);
+  inp.value='';
+  const typing=showTyping();
+  btn.disabled=true;
+  try{
+    const res=await sendToWorker({messages:historyMessages.concat([{role:'user',content:txt}])});
+    typing.remove();
+    const j=await res.json();
+    const reply=j.text||'مش فاهمك قوي 😅 جرب تاني';
+    append('bot',reply);
+    historyMessages.push({role:'user',content:txt},{role:'assistant',content:reply});
+  }catch(e){
+    typing.remove();
+    append('bot','النت فاصل ولا إيه؟ 😅');
+  }
+  btn.disabled=false;
+  inp.focus();
+}
 
-  quick.addEventListener('click', (e)=> {
-    if(e.target.tagName === 'BUTTON'){
-      inp.value = e.target.dataset.text || '';
-      inp.focus();
-    }
-  });
-
-  // ensure that new messages keep visible on DOM changes (MutationObserver)
-  const mo = new MutationObserver((mutations)=> {
-    // if user is near bottom, keep auto-scrolling
-    const threshold = 120;
-    const nearBottom = (area.scrollHeight - area.scrollTop - area.clientHeight) < threshold;
-    if(nearBottom){
-      // scroll last child into view
-      const last = area.lastElementChild;
-      if(last) last.scrollIntoView({behavior:'smooth', block:'nearest'});
-    }
-  });
-  mo.observe(area, {childList:true, subtree:false});
-
-  // listen to parent messages in case parent decides to force-close or adjust
-  window.addEventListener('message', (ev)=> {
-    if(!ev.data || typeof ev.data.action !== 'string') return;
-    if(ev.data.action === 'closeChat'){
-      closeChat();
-    }
-    // parent could also send focus commands
-    if(ev.data.action === 'focusInput'){
-      if(overlay.classList.contains('show')) setTimeout(()=> inp.focus(), 200);
-    }
-  });
-
-  // Accessibility: close on Escape
-  window.addEventListener('keydown', (e)=> {
-    if(e.key === 'Escape' && overlay.classList.contains('show')){
-      closeChat();
-    }
-  });
-
-  // Prevent accidental page scroll inside iframe when overlay open (best-effort)
-  overlay.addEventListener('touchmove', (e)=> {
-    // allow internal scrolling but prevent parent scrolling
-    e.stopPropagation();
-  }, {passive:false});
-
-  // initial small check to ensure area is scrolled to bottom if any preloaded content exists
-  setTimeout(()=> {
-    if(area.lastElementChild) area.lastElementChild.scrollIntoView({block:'nearest'});
-  }, 200);
-
-  // expose a small debug for parent if needed
-  window.__KAWKAB_CHAT = {
-    open: openChat,
-    close: closeChat,
-    sendMessageText: (t)=> { inp.value = t; sendMessage(); }
-  };
-
+/* ===== أحداث ===== */
+btn.onclick=sendMessage;
+inp.onkeydown=e=>{if(e.key==='Enter')sendMessage();};
+quick.onclick=e=>{if(e.target.tagName==='BUTTON'){inp.value=e.target.dataset.text;inp.focus();}};
+inp.addEventListener('focus',()=>setTimeout(()=>{area.lastElementChild?.scrollIntoView({behavior:'smooth'});},300));
 })();
 </script>
 </body>
