--- a/chat-widget.html
+++ b/chat-widget.html
@@ -22,21 +22,25 @@
 *{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden}
 
+/* === تعديل بسيط على الزر العائم: بقى مرن ويعرض النص كامل دون قص === */
 .chat-fab {
 position:fixed;
-bottom:calc(70px + env(safe-area-inset-bottom, 0px));
+bottom:calc(70px + env(safe-area-inset-bottom, 0px)); /* تم تعديل هذا السطر لرفع الزر 50 بيكسل */
 right:20px;
 z-index:9999;
-width:60px;height:60px;border-radius:50%;
+min-width:60px;
+height:60px;
+padding:0 14px;
+border-radius:999px; /* من دائري إلى pill عشان النص يظهر */
 background:linear-gradient(135deg,#2d2d2d,#1a1a1a);
-display:flex;align-items:center;justify-content:center;
+display:inline-flex;align-items:center;justify-content:center;
 color:#fff;
-font-size:14px;
+font-size:14px; /* تم تعديل حجم الخط ليتناسب مع كلمة "فصال" */
 font-weight:700;
-line-height: 60px; /* تم إضافة هذا السطر لتوسيط كلمة "فصال" عمودياً */
-text-align: center; /* للتأكد من توسيط النص أفقياً */
 cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.3);
 transition:transform .25s,opacity .25s;
+white-space:nowrap;
+line-height:1;
 }
 .chat-fab:hover{transform:scale(1.05)}
 .chat-fab.hidden{opacity:0;pointer-events:none}
@@ -332,15 +336,13 @@ max-height:800px;
 border-radius:16px;
 box-shadow:0 20px 60px rgba(0,0,0,0.3);
 }
-.chat-fab{right:28px;bottom:78px}
+.chat-fab{right:28px;bottom:78px} /* تم تعديل هذا السطر ليتناسب مع media query */
 }
 </style>
 </head>
 <body>
 
-<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">فصال</div>
-
-<div class="chat-overlay" id="chatOverlay" aria-hidden="true">
+<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">فصال</div> <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
 <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
 <div class="header">
 <div class="title">بوت كوكب — فصال مباشر</div>
@@ -386,7 +388,7 @@ let historyMessages = [], chatOpened = false, finalized = false;
 let timerInterval = null;
 let timeRemaining = 60;
 let timerStarted = false;
-let lastDiscountPercent = null;
+let lastDiscountPercent = null; // متغير لحفظ آخر نسبة خصم تم ذكرها
 
 function postToParent(action){
 try{
@@ -408,11 +410,14 @@ area.scrollTop = area.scrollHeight;
 });
 }
 
+// وظيفة لاستخلاص نسبة الخصم من رسالة البوت
 function extractDiscount(text){
+// يبحث عن نمط: عرض: رقم%
 const match = text.match(/عرض:\s*(\d+)%/);
 if(match && match[1]){
 return parseInt(match[1], 10);
 }
+// يمكن إضافة أنماط أخرى هنا إن لزم الأمر (مثل "خصم X%")
 const match2 = text.match(/خصم\s*(\d+)%/);
 if(match2 && match2[1]){
 return parseInt(match2[1], 10);
@@ -429,11 +434,12 @@ b.className = isResult ? 'result-msg' : 'bubble';
 if(who === 'bot' && !isResult){
 const discount = extractDiscount(text);
 if(discount !== null){
-lastDiscountPercent = discount;
+lastDiscountPercent = discount; // حفظ آخر نسبة خصم
 }
 }
 
 if(isResult){
+// يتم استخدام النص المرسل كنتيجة نهائية
 b.innerHTML = `<div class="result-title">🎉 مبروك! خصمك النهائي</div><div class="result-value">${safeText(text)}</div>`;
 } else {
 b.innerHTML = safeText(text);
@@ -494,18 +500,19 @@ btn.disabled = true;
 inp.disabled = true;
 quick.style.display = 'none';
 
+// يتم تحديد الخصم النهائي
+// إذا كان lastDiscountPercent يحمل قيمة، نستخدمها. وإلا، نستخدم 5 كقيمة افتراضية.
 const finalDiscount = lastDiscountPercent !== null ? lastDiscountPercent : 5;
 const finalDiscountText = `${finalDiscount}%`;
 
 setTimeout(()=>{
-append('bot', finalDiscountText, true);
+append('bot', finalDiscountText, true); // عرض النتيجة النهائية
 setTimeout(()=>{
 append('bot', 'شكراً ليك! تم حفظ العرض وهنتواصل معاك قريب جداً 🎊');
 }, 1000);
 }, 500);
 }
 
-// تم الإبقاء على هذا لتمكين "Scroll into view" عند التركيز اليدوي
 inp.addEventListener('focus', ()=>{
 setTimeout(()=>{
 const controls = document.querySelector('.controls');
@@ -537,7 +544,7 @@ chatOpened = true;
 postToParent('chatOpened');
 setTimeout(()=>{
 scrollToBottom();
-// inp.focus(); // تم إزالة التركيز التلقائي لفتح الكيبورد فقط عند فتح الشات
+inp.focus(); // تركيز عند فتح الشات فقط
 }, 400);
 }
 
@@ -577,7 +584,6 @@ return;
 const typing = showTyping();
 btn.disabled = true;
 inp.disabled = true;
-inp.blur(); // إزالة التركيز عند الإرسال لمنع فتح الكيبورد/الشاشة الافتراضية
 
 try{
 const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
@@ -599,7 +605,7 @@ append('bot', 'النت فاصل ولا إيه؟ 😅');
 } finally {
 btn.disabled = false;
 inp.disabled = false;
-// inp.focus(); // **تم إزالة التركيز هنا لمنع فتح الكيبورد بعد الرد**
+// مـا فيش تركيز تلقائي هنا علشان متفتحش الكيبورد لما الرد يجيلك
 }
 }
 
