--- a/chat-widget.html
+++ b/chat-widget.html
@@ -22,25 +22,27 @@
 *{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;overflow:hidden}
 
-/* === تعديل بسيط على الزر العائم: بقى مرن ويعرض النص كامل دون قص === */
+/* === تم تعديل هذا الجزء ليعرض النص كاملاً في شكل كبسولة (Pill Shape) === */
 .chat-fab {
 position:fixed;
-bottom:calc(70px + env(safe-area-inset-bottom, 0px)); /* تم تعديل هذا السطر لرفع الزر 50 بيكسل */
+bottom:calc(70px + env(safe-area-inset-bottom, 0px)); 
 right:20px;
 z-index:9999;
-min-width:60px;
-height:60px;
-padding:0 14px;
-border-radius:999px; /* من دائري إلى pill عشان النص يظهر */
+min-width:60px; /* أصبح الحد الأدنى للعرض 60px */
+height:60px; /* الارتفاع ثابت */
+padding:0 18px; /* إضافة مساحة حول النص */
+border-radius:999px; /* شكل كبسولة ليعرض النص كاملاً */
 background:linear-gradient(135deg,#2d2d2d,#1a1a1a);
-display:inline-flex;align-items:center;justify-content:center;
+display:inline-flex; /* استخدام inline-flex */
+align-items:center; /* توسيط عمودي */
+justify-content:center; /* توسيط أفقي */
 color:#fff;
-font-size:14px; /* تم تعديل حجم الخط ليتناسب مع كلمة "فصال" */
+font-size:14px;
 font-weight:700;
-cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.3);
+cursor:pointer;
+box-shadow:0 4px 12px rgba(0,0,0,0.3);
 transition:transform .25s,opacity .25s;
-white-space:nowrap;
-line-height:1;
+white-space:nowrap; /* منع النص من الالتفاف */
 }
 .chat-fab:hover{transform:scale(1.05)}
 .chat-fab.hidden{opacity:0;pointer-events:none}
@@ -336,13 +338,15 @@ max-height:800px;
 border-radius:16px;
 box-shadow:0 20px 60px rgba(0,0,0,0.3);
 }
-.chat-fab{right:28px;bottom:78px} /* تم تعديل هذا السطر ليتناسب مع media query */
+.chat-fab{right:28px;bottom:78px}
 }
 </style>
 </head>
 <body>
 
-<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">فصال</div> <div class="chat-overlay" id="chatOverlay" aria-hidden="true">
+<div class="chat-fab" id="openChat" role="button" aria-label="افتح الشات">فصال</div> 
+
+<div class="chat-overlay" id="chatOverlay" aria-hidden="true">
 <div class="chat-box" role="dialog" aria-modal="true" aria-label="بوت كوكب">
 <div class="header">
 <div class="title">بوت كوكب — فصال مباشر</div>
@@ -500,8 +504,7 @@ btn.disabled = true;
 inp.disabled = true;
 quick.style.display = 'none';
 
-// يتم تحديد الخصم النهائي
-// إذا كان lastDiscountPercent يحمل قيمة، نستخدمها. وإلا، نستخدم 5 كقيمة افتراضية.
+// يتم تحديد الخصم النهائي (آخر خصم تم حفظه أو 5% افتراضي)
 const finalDiscount = lastDiscountPercent !== null ? lastDiscountPercent : 5;
 const finalDiscountText = `${finalDiscount}%`;
 
@@ -513,6 +516,7 @@ append('bot', 'شكراً ليك! تم حفظ العرض وهنتواصل معا
 }, 500);
 }
 
+// تم الإبقاء على هذا لتمكين "Scroll into view" عند التركيز اليدوي
 inp.addEventListener('focus', ()=>{
 setTimeout(()=>{
 const controls = document.querySelector('.controls');
@@ -544,7 +548,8 @@ chatOpened = true;
 postToParent('chatOpened');
 setTimeout(()=>{
 scrollToBottom();
-inp.focus(); // تركيز عند فتح الشات فقط
+// هنا تم إبقاء التركيز لفتح الكيبورد عند فتح الشات لأول مرة فقط
+inp.focus(); 
 }, 400);
 }
 
@@ -584,6 +589,7 @@ return;
 const typing = showTyping();
 btn.disabled = true;
 inp.disabled = true;
+inp.blur(); // إزالة التركيز عند الإرسال لمنع فتح الكيبورد/الشاشة الافتراضية
 
 try{
 const res = await sendToWorker({messages: historyMessages.concat([{role:'user', content: txt}])});
@@ -605,7 +611,7 @@ append('bot', 'النت فاصل ولا إيه؟ 😅');
 } finally {
 btn.disabled = false;
 inp.disabled = false;
-// مـا فيش تركيز تلقائي هنا علشان متفتحش الكيبورد لما الرد يجيلك
+// تم حذف inp.focus() هنا لمنع فتح الكيبورد تلقائيًا بعد رد البوت
 }
 }
 
